fix horizontal scrolling

--- a/spire-coffee/src/App.scss
+++ b/spire-coffee/src/App.scss
@@ -7,8 +7,8 @@ body {
 }
 
 #root {
-  width: 100vw;
-  min-height: 100vh;
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   font-size: 14px;
